--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -56,6 +56,7 @@
             </div>
         </div>
     </section>
+    {% comment %}
     <section class="pt-6 pb-lg-15 pb-11">
         <div class="container-fluid">
             <div class="slick-slider"
@@ -138,7 +139,8 @@
             </div>
         </div>
     </section>
-    <section class="pb-11 pb-lg-15">
+    {% endcomment %}
+    <section class="pb-11 pb-lg-15 pt-4">
         <div class="container">
             <h2 class="mb-8 text-center fs-30 fs-md-40">Featured Items</h2>
             <div class="row">
