--- a/static/web/css/themes.css
+++ b/static/web/css/themes.css
@@ -18326,7 +18326,7 @@ button.bg-white:focus {
 }
 
 .text-primary {
-    color: #ed9021 !important
+    color: #c02531 !important
 }
 
 a.text-primary:hover,
@@ -24662,7 +24662,7 @@ a.bg-hover-white:focus {
 }
 
 .w-52px {
-    width: 52px !important
+    width: 100px !important
 }
 
 .w-60px {
