--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -275,196 +275,7 @@
                                         About
                                         <span class="caret"></span>
                                     </a>
-                                    <!-- <div class="dropdown-menu dropdown-menu-xl px-0 pb-10 pt-5 dropdown-menu-listing overflow-hidden x-animated x-fadeInUp">
-    <div class="container container-xxl">
-    <div class="row no-gutters w-100">
-    <div class="col-2">
-    
-    <h4 class="dropdown-header text-dark fs-16 mb-2 lh-1">
-    Shop Pages
-    </h4>
-    
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-01.html">
-    Shop Layout <sup>V1</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-02.html">
-    Shop Layout <sup>V2</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-03.html">
-    Shop Layout <sup>V3</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-04.html">
-    Shop Layout <sup>V4</sup>
-    </a>
-    </div>
-    
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-05.html">
-    Shop Layout <sup>V5</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-06.html">
-    Shop Layout <sup>V6</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-07.html">
-    Shop Layout <sup>V7</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-08.html">
-    Shop Layout <sup>V8</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-09.html">
-    Shop Layout <sup>V9</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="shop-page-10.html">
-    Shop Layout <sup>V10</sup>
-    </a>
-    </div>
-    </div>
-    <div class="col-2">
-    
-    <h4 class="dropdown-header text-dark fs-16 mb-2 lh-1">
-    Product Page
-    </h4>
-    
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-01.html">
-    Product Layout <sup>V1</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-02.html">
-    Product Layout <sup>V2</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-03.html">
-    Product Layout <sup>V3</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-04.html">
-    Product Layout <sup>V4</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-05.html">
-    Product Layout <sup>V5</sup>
-    </a>
-     </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-06.html">
-    Product Layout <sup>V6</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-07.html">
-    Product Layout <sup>V7</sup>
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-08.html">
-    Product Layout <sup>V8</sup>
-    </a>
-    </div>
-    </div>
-    <div class="col-2">
-    
-    <h4 class="dropdown-header text-dark fs-16 mb-2 lh-1">
-    Product Type
-    </h4>
-    
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-03.html">
-    Product Simple
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-05.html">
-    Product Variable
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-07.html">
-    Product Time Limit
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-06.html">
-    Product Grouped
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="product-page-09.html">
-    Product External / Affiliate
-    </a>
-    </div>
-    </div>
-    <div class="col-2">
-    
-    <h4 class="dropdown-header text-dark fs-16 mb-2 lh-1">
-    Other Pages
-    </h4>
-    
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="cart.html">
-    Cart
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="compare.html">
-    Compare
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="stores.html">
-    Store
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="wishlist.html">
-    Wishlist
-    </a>
-    </div>
-    <div class="dropdown-item">
-    <a class="dropdown-link" href="checkout.html">
-    Checkout
-     </a>
-    </div>
-    </div>
-    <div class="col-4 h-100">
-    <div class="card border-0 mt-2">
-    <img data-cfsrc="{% static 'web/images/menu.jpg" alt="Image Menu" class="card-img" style="display:none;visibility:hidden;"><img src="{% static 'web/images/menu.jpg" alt="Image Menu" class="card-img">
-    <div class="card-img-overlay d-flex flex-column pt-6 pb-5">
-    <p class="text-white font-weight-600 text-center mb-0">
-    Spring Season
-    </p>
-    <h3 class="text-white fs-40 text-center">Holiday Chairs</h3>
-    <div class="mt-auto text-center">
-    <a href="shop-page-03.html" class="btn btn-primary">shop
-    now</a>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div> -->
+                                   
                                 </li>
                                 <li aria-haspopup="true" aria-expanded="false"
                                     class="nav-item dropdown py-2 py-xl-5 px-0 px-xl-4">
@@ -633,15 +444,80 @@
                         <span class="fs-24 toggle-icon"></span>
                     </button>
                     <a class="navbar-brand d-inline-block mx-auto py-0" href="{% url 'web:index' %}">
-                        <img data-cfsrc="{% static 'web/images/logo.png' %}" alt="Furnitor"
+                        <img data-cfsrc="{% static 'web/images/Matanah Logo.png' %}" alt="Furnitor"
                             style="display:none;visibility:hidden;">
-                        <img src="{% static 'web/images/logo.png' %}" alt="Furnitor">
+                        <img src="{% static 'web/images/Matanah Logo.png' %}" alt="Furnitor">
                     </a>
-                    <a href="#search-popup" data-gtf-mfp="true"
+                    <!-- <a href="#search-popup" data-gtf-mfp="true"
                         data-mfp-options='{"type":"inline","focus": "#keyword","mainClass": "mfp-search-form mfp-move-from-top mfp-align-top"}'
-                        class="nav-search d-block py-0" title="Search"><i class="far fa-search"></i></a>
+                        class="nav-search d-block py-0" title="Search"><i class="far fa-search"></i></a> -->
                 </nav>
             </div>
+        </div>
+        
+    </div>
+    <div class="sidenav canvas-sidebar bg-white">
+        <div class="canvas-overlay">
+        </div>
+        <div class="pt-5 pb-7 card border-0 h-100">
+            <div class="d-flex align-items-center card-header border-0 py-0 pl-8 pr-7 mb-9 bg-transparent">
+                <a href="#" class="d-block w-52px">
+                    <img data-cfsrc="{% static 'web/images/Matanah Logo.png' %}" alt="Furnitor"
+                        style="display:none;visibility:hidden;">
+                        <img src="{% static 'web/images/Matanah Logo.png' %}" alt="Furnitor">
+                            
+                </a>
+                <span class="canvas-close d-inline-block text-right fs-24 ml-auto lh-1 text-primary"><i
+                        class="fal fa-times"></i></span>
+            </div>
+            <div class="overflow-y-auto pb-6 pl-8 pr-7 card-body pt-0">
+                <ul class="navbar-nav main-menu px-0 ">
+                    <li aria-haspopup="true" aria-expanded="false"
+                                    class=" nav-item  dropdown-item-home  dropdown py-2 py-xl-5 px-0 px-xl-4  ">
+                                    <a class=" {% if is_index %} nav-link {% endif %} p-0" href="{% url 'web:index' %}">
+                                        Home
+                                        <span class="caret"></span>
+                                    </a>
+                                   
+                                </li>
+                                <li aria-haspopup="true" aria-expanded="false"
+                                    class="nav-item dropdown-item-shop dropdown py-2 py-xl-5 px-0 px-xl-4">
+                                    <a class="{% if is_about %} nav-link {% endif %} p-0" href="{% url 'web:about' %}">
+                                        About
+                                        <span class="caret"></span>
+                                    </a>
+                                   
+                                </li>
+                                <li aria-haspopup="true" aria-expanded="false"
+                                    class="nav-item dropdown py-2 py-xl-5 px-0 px-xl-4">
+                                    <a class=" {% if is_product %} nav-link  {% endif %}  p-0"
+                                        href="/product/all/">
+                                        Product
+                                        <span class="caret"></span>
+                                    </a>
+                                   
+                                </li>
+                                <li aria-haspopup="true" aria-expanded="false"
+                                    class="nav-item dropdown-item-blog dropdown py-2 py-xl-5 px-0 px-xl-4">
+                                    <a class="{% if is_gallery %} nav-link  {% endif %} p-0"
+                                        href="{% url 'web:gallery' %}">
+                                        Gallery
+                                        <span class="caret"></span>
+                                    </a>
+                                    
+                                </li>
+                                <li aria-haspopup="true" aria-expanded="false"
+                                    class="nav-item dropdown-item-docs dropdown py-2 py-xl-5 px-0 px-xl-4">
+                                    <a class="{% if is_contact %} nav-link  {% endif %}  p-0"
+                                        href="{% url 'web:contact' %}">
+                                        Contact
+                                        <span class="caret"></span>
+                                    </a>
+                                    
+                                </li>
+                </ul>
+            </div>
+            
         </div>
     </div>
 </header>
